--- a/myapp/public/index.html
+++ b/myapp/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="./IMG_7147.jpg" />
+    <link rel="icon" href="./images/IMG_0233.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
